--- a/index.html
+++ b/index.html
@@ -8,43 +8,31 @@
     <!--STYLES-->
     <link rel='stylesheet' href='style.css'>
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="js/start/startScreen.css">
+    <link rel="stylesheet" href="css/startGameStyle.css">
+    <link rel="stylesheet" href="css/gameOverStyle.css">
 
 </head>
 
-<body ng-controller="startCtrl">
-    <!--{{test}}-->
+<body>
 
-    <!--PAGE TITLE-->
+    <!--Game Title-->
     <div class="pageTitle">SNAKE BYTES</div>
 
-    <!--START MENU-->
-    <div class="startScreen">
-        <!--START BUTON MODAL-->
-        <a href="#start"></a>
-        <input id="startButton" class="startButton" type="submit" value="START GAME" />
+    <!--Start Directive-->
+    <start-dir></start-dir>
+    <game-over-dir></game-over-dir>
 
-        <canvas id="GameCanvas" style="display: none;"></canvas>
-
-    </div>
-
-    <!--SCRIPT/LIBRARIES-->
+    <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
+    <!--Angular-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
+    <!--Angular ui-router-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
-
-    <!--SCRIPT/JS-->
+    <!--Scripts-->
     <script src="js/app.js"></script>
-
-    <!--SCRIPT/JS/HOME-->
-    <script src="js/home/homePageTitleCtrl.js"></script>
-
-    <!--CANVAS-->
-    <!--<Script src="js/canvas.js"></Script>-->
-    
-    <!--SCRIPT/JS/START-->
-    <script src="js/start/startButton.js"></script>
-    <script src="js/start/startCtrl.js"></script>
+    <Script src="js/canvas.js"></Script>
+    <script src="js/start/startDir.js"></script>
+    <script src="js/gameOver/gameOverDir.js"></script>
 </body>
 
 </html>
