--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/startGameStyle.css">
     <link rel="stylesheet" href="css/gameOverStyle.css">
+    <link rel="stylesheet" href="css/copyRightStyle.css">
 
 </head>
 
@@ -20,7 +21,13 @@
 
     <!--Start Directive-->
     <start-dir></start-dir>
+    <!--Game Over Directive-->
     <game-over-dir></game-over-dir>
+    <!--Copy Right Directive-->
+    <div class="directive-footer">
+        @phillippuckett88, copyright
+        <copy-right-dir></copy-right-dir>
+    </div>
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
@@ -33,6 +40,7 @@
     <Script src="js/canvas.js"></Script>
     <script src="js/start/startDir.js"></script>
     <script src="js/gameOver/gameOverDir.js"></script>
+    <script src="js/copyRight/copyRightDir.js"></script>
 </body>
 
 </html>
