--- a/index.html
+++ b/index.html
@@ -4,20 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Snake Bytes</title>
-
-    <!--STYLES-->
+    <!--Styles-->
     <link rel='stylesheet' href='style.css'>
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/startGameStyle.css">
     <link rel="stylesheet" href="css/gameOverStyle.css">
     <link rel="stylesheet" href="css/copyRightStyle.css">
-
+    <link rel="stylesheet" href="css/homePageStyle.css">
 </head>
 
 <body>
 
-    <!--Game Title-->
-    <div class="pageTitle">SNAKE BYTES</div>
+    <a href="/#/"></a>
 
     <!--Start Directive-->
     <start-dir></start-dir>
@@ -28,6 +25,8 @@
         <copy-right-dir></copy-right-dir>
     </div>
 
+    <!--Ui-Router-->
+    <div ui-view></div>
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
@@ -38,9 +37,13 @@
     <!--Scripts-->
     <script src="js/app.js"></script>
     <Script src="js/canvas.js"></Script>
+    <!--Script Directives-->
     <script src="js/directives/start/startDir.js"></script>
     <script src="js/directives/gameOver/gameOverDir.js"></script>
     <script src="js/directives/copyRight/copyRightDir.js"></script>
+    <script src="js/views/scoreBoard/scoreBoardCtrl.js"></script>
+    <script src="js/views/scoreBoard/scoreBoardSvc.js"></script>
+    <script src="js/views/home/homeCtrl.js"></script>
 </body>
 
 </html>
