--- a/js/directives/gameOver/gameOverTmpl.html
+++ b/js/directives/gameOver/gameOverTmpl.html
@@ -1,3 +1,3 @@
-<div class="gameOverScreen">
-    <button class="gameOverButton" ng-click="" onClick="this.style.visibility= 'hidden'; ">GAME OVER</button>
-</div>
+<!--<div class="gameOverScreen">
+    <button class="gameOverButton" onClick="this.style.visibility= 'hidden'; ">GAME OVER</button>
+</div>-->
