Routes Init, Home View  Complete

--- a/js/directives/copyRight/copyRightTmpl.html
+++ b/js/directives/copyRight/copyRightTmpl.html
@@ -1,1 +1,5 @@
-@phillippuckett88, copyright {{date}}
+    <!--Copy Right Directive-->
+    <!--<div class="directive-footer">-->
+        @phillippuckett88, copyright&#169 {{date}}
+        <!--<copy-right-dir></copy-right-dir>-->
+    <!--</div>-->
