--- a/index.html
+++ b/index.html
@@ -7,26 +7,20 @@
     <!--Styles-->
     <link rel='stylesheet' href='style.css'>
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/gameOverStyle.css">
     <link rel="stylesheet" href="css/copyRightStyle.css">
     <link rel="stylesheet" href="css/homePageStyle.css">
 </head>
 
 <body>
+    <!--Ui-Router-->
+    <div ui-view="/#/home"></div>
 
-    <a href="/#/"></a>
-
-    <!--Start Directive-->
-    <start-dir></start-dir>
-    <!--Game Over Directive-->
-    <game-over-dir></game-over-dir>
     <!--CopyRight Directive-->
     <div class="directive-footer">
         <copy-right-dir></copy-right-dir>
     </div>
-
-    <!--Ui-Router-->
-    <div ui-view></div>
+    <!--Start Directive-->
+    <start-dir></start-dir>
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
@@ -37,13 +31,9 @@
     <!--Scripts-->
     <script src="js/app.js"></script>
     <Script src="js/canvas.js"></Script>
-    <!--Script Directives-->
-    <script src="js/directives/start/startDir.js"></script>
-    <script src="js/directives/gameOver/gameOverDir.js"></script>
     <script src="js/directives/copyRight/copyRightDir.js"></script>
-    <script src="js/views/scoreBoard/scoreBoardCtrl.js"></script>
-    <script src="js/views/scoreBoard/scoreBoardSvc.js"></script>
-    <script src="js/views/home/homeCtrl.js"></script>
+    <script src="js/directives/start/startDir.js"></script>
+
 </body>
 
 </html>
