--- a/index.html
+++ b/index.html
@@ -7,20 +7,18 @@
     <!--Styles-->
     <link rel='stylesheet' href='style.css'>
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" href="css/copyRightStyle.css">
-    <link rel="stylesheet" href="css/homePageStyle.css">
+    <link rel="stylesheet" href="css/copyrightStyle.css">
+    <link rel="stylesheet" href="css/homeStyle.css">
+    <link rel="stylesheet" href="css/optionsStyle.css">
+    <link rel="stylesheet" href="css/gameStyle.css">
 </head>
 
 <body>
     <!--Ui-Router-->
-    <div ui-view="/#/home"></div>
+    <ui-view></ui-view>
 
     <!--CopyRight Directive-->
-    <div class="directive-footer">
-        <copy-right-dir></copy-right-dir>
-    </div>
-    <!--Start Directive-->
-    <start-dir></start-dir>
+    <copy-right-dir></copy-right-dir>
 
     <!--jQuery-->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
@@ -32,7 +30,11 @@
     <script src="js/app.js"></script>
     <Script src="js/canvas.js"></Script>
     <script src="js/directives/copyRight/copyRightDir.js"></script>
-    <script src="js/directives/start/startDir.js"></script>
+    <script src="js/routes/home/homeCtrl.js"></script>
+    <script src="js/routes/game/gameCtrl.js"></script>
+    <script src="js/routes/options/optionsCtrl.js"></script>
+
+    <script src=""></script>
 
 </body>
 
