Principle Routes Complete

--- a/js/routes/game/gameTmpl.html
+++ b/js/routes/game/gameTmpl.html
@@ -1,11 +1,21 @@
 <div id="gamePage">
-    <div class="gameplay">{{gameHeader}}</div>
+    <div class="gamePlay">
+        <div class="homeButton" onclick="goHome()">{{gameHeader}}
+            <script>
+                var goHome = function () {
+                window.history.back();
+            };
+            </script>
+        </div>
+    </div>
+    <!--BACK-->
 
-    <button onclick="goHome()">BACK</button>
+    <!--Canvas-->
     <script>
-        var goHome = function () {
-        window.history.back();
-    };
-
+        /** pause menu */
+            /* resume */
+            /* options */
+            /** game over */
+            /**  */
     </script>
 </div>
