--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <title>Snake Bytes</title>
     <!--Styles-->
-    <link rel='stylesheet' href='style.css'>
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="css/copyrightStyle.css">
     <link rel="stylesheet" href="css/homeStyle.css">
@@ -28,7 +27,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <!--Scripts-->
     <script src="js/app.js"></script>
-    <Script src="js/canvas.js"></Script>
+    <Script src="js/routes/game/gameCanvas.js"></Script>
     <script src="js/directives/copyRight/copyRightDir.js"></script>
     <script src="js/routes/home/homeCtrl.js"></script>
     <script src="js/routes/game/gameCtrl.js"></script>
