Init Hide Canvas, init Game Over

--- a/js/routes/game/gameTmpl.html
+++ b/js/routes/game/gameTmpl.html
@@ -9,9 +9,20 @@
         </div>
     </div>
     <!--BACK-->
+    <!--Stop Game Function-->
+    <!--<script>
+        var stopGame = function () {
+            if (startGame = true) {
+                return startGame = false;
+            }
+        };
+        stopGame();
+        console.log("stopGame Running");
+    </script>-->
 
     <!--Canvas-->
     <script>
+        main();
         /** pause menu */
             /* resume */
             /* options */
