--- a/js/routes/options/optionsTmpl.html
+++ b/js/routes/options/optionsTmpl.html
@@ -2,10 +2,9 @@
     <div class="optionsMenu">{{header}}
         <div class="toggleMusic">{{toggleMusic}}</div>
         <div class="toggleSound">{{toggleSound}}</div>
-        <div class="applyButton" type="submit"><a href="/#/home">APPLY</div> 
-        <div class="backButton" onclick="goHome()">HOME
+        <div class="backButton" onclick="goBack()">BACK
             <script>
-                var goHome = function () {
+                var goBack = function () {
                     window.history.back();
                 };
             </script>
