--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/homeStyle.css">
     <link rel="stylesheet" href="css/optionsStyle.css">
     <link rel="stylesheet" href="css/gameStyle.css">
+    <link rel="stylesheet" href="css/pauseStyle.css">
+    <link rel="stylesheet" href="css/scoreboardStyle.css">
 </head>
 
 <body>
@@ -32,6 +34,8 @@
     <script src="js/routes/home/homeCtrl.js"></script>
     <script src="js/routes/game/gameCtrl.js"></script>
     <script src="js/routes/options/optionsCtrl.js"></script>
+    <script src="js/routes/pause/pauseCtrl.js"></script>
+    <script src="js/routes/scoreboard/scoreboardCtrl.js"></script>
 
     <script src=""></script>
 
