--- a/js/routes/home/homeTmpl.html
+++ b/js/routes/home/homeTmpl.html
@@ -1,22 +1,23 @@
-<div id="homePage">
-    <div class="startMenu">{{homeHeader}}
-        <a href="/#/home">
-            <br>
+<div id="homePage" class="startMenu">{{homeHeader}}
+    <a href="/#/home">
 
-            <!--Start Button-->
-            <div>
-                <a href="/#/gameplay">
-                    <button class="startButton" ng-click="toggle();">{{startGame}}</button>
-                </a>
-            </div>
-            <br>
-            
-            <!--Options Button-->
-            <div>
-                <a href="/#/options">
-                    <button class="optionsButton" ng-click="toggle();">{{options}}</button>
-                </a>
-            </div>
-        </a>
-    </div>
+        <!--Start Button-->
+        <div>
+            <a href="/#/gameplay">
+                <button class="startButton">{{startGame}}</button>
+            </a>
+        </div>
+
+        <!--Options Button-->
+        <div>
+            <a href="/#/options">
+                <button class="optionsButton">{{options}}</button>
+            </a>
+        </div>
+        <div>
+            <a href="/#/scoreboard">
+                <button class="scoreboardButton">{{scoreboardButton}}</button>
+            </a>
+        </div>
+    </a>
 </div>
