--- a/js/routes/options/optionsTmpl.html
+++ b/js/routes/options/optionsTmpl.html
@@ -1,13 +1,11 @@
-<div id="optionsPage">
-    <div class="optionsMenu">{{header}}
-        <div class="toggleMusic">{{toggleMusic}}</div>
-        <div class="toggleSound">{{toggleSound}}</div>
-        <div class="backButton" onclick="goBack()">BACK
-            <script>
-                var goBack = function () {
+<div id="optionsPage" class="optionsMenu">{{header}}
+    <div class="toggleMusic">{{toggleMusic}}</div>
+    <div class="toggleSound">{{toggleSound}}</div>
+    <div class="backButton" onclick="goBack()">BACK
+        <script>
+            var goBack = function () {
                     window.history.back();
                 };
-            </script>
-        </div>
+        </script>
     </div>
 </div>
