Game Over Button Complete

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Snake Bytes</title>
     <!--Styles-->
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="css/copyrightStyle.css">
     <link rel="stylesheet" href="css/homeStyle.css">
     <link rel="stylesheet" href="css/optionsStyle.css">
@@ -27,6 +28,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
     <!--Angular ui-router-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    <!--Buzz Audio-->
+    <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/buzz/1.1.10/buzz.min.js"></script>-->
     <!--Scripts-->
     <script src="js/app.js"></script>
     <Script src="js/routes/game/gameCanvas.js"></Script>
