--- a/js/directives/copyRight/copyRightTmpl.html
+++ b/js/directives/copyRight/copyRightTmpl.html
@@ -1,3 +1,10 @@
 <div class="directive-footer">
     @PHILLIPPUCKETT88, COPYRIGHT&#169 {{date}}
 </div>
+<div class="icons">
+    <i class="fa fa-facebook-official"></i>
+    <i class="fa fa-twitter"></i>
+    <i class="fa fa-pinterest-p"></i>
+    <i class="fa fa-vine"></i>
+    <i class="fa fa-instagram"></i>
+</div>
