--- a/js/routes/options/optionsTmpl.html
+++ b/js/routes/options/optionsTmpl.html
@@ -1,5 +1,6 @@
 <div id="optionsPage" class="optionsMenu">{{header}}
-    <div class="toggleMusic">{{toggleMusic}}</div>
+    <div class="toggleMusic">{{toggleMusic}}
+    </div>
     <div class="toggleSound">{{toggleSound}}</div>
     <div class="backButton" onclick="goBack()">BACK
         <script>
