--- a/js/directives/copyRight/copyRightTmpl.html
+++ b/js/directives/copyRight/copyRightTmpl.html
@@ -4,7 +4,8 @@
 <div class="icons">
     <i class="fa fa-facebook-official"></i>
     <i class="fa fa-twitter"></i>
-    <i class="fa fa-pinterest-p"></i>
-    <i class="fa fa-vine"></i>
     <i class="fa fa-instagram"></i>
+    <i class="fa fa-vine"></i>
+    <i class="fa fa-soundcloud"></i>
+    <i class="fa fa-linkedin-square"></i>
 </div>
