--- a/js/routes/pause/pauseTmpl.html
+++ b/js/routes/pause/pauseTmpl.html
@@ -1,24 +1,22 @@
-<div id="pausePage" class="pauseMenu">{{pauseHeader}}
-            <br>
-            <!--Resume Button-->
-            <div>
-                    <button class="resumeButton" ng-click="toggle();">{{resume}}</button>
-            </div>
-            <br>
-
-            <!--Options Button-->
-            <div>
-                <a href="/#/options">
-                    <button class="optionsButton" ng-click="toggle();">{{options}}</button>
-                </a>
-            </div>
-
-            <!--Quit Button-->
-            <div>
-                <a href="/#/home">
-                    <button class="homeButton" ng-click="toggle();">{{home}}</button>
-                </a>
-            </div>
+<div id="pausePage" class="PauseMenu">{{pauseHeader}}
+    <!--Options Button-->
+    <div>
+        <a href="/#/options">
+            <button class="pauseOptionsButton">{{options}}</button>
         </a>
     </div>
+
+    <!--Resume Button-->
+    <div>
+        <a href="/#/gameplay">
+        <button class="pauseResumeButton">{{resume}}</button>
+    </div>
+
+    <!--Quit Button-->
+    <div>
+        <a href="/#/home">
+            <button class="pauseHomeButton">{{home}}</button>
+        </a>
+    </div>
+    </a>
 </div>
