The things I do for Mark Gillis

--- a/js/routes/game/gameTmpl.html
+++ b/js/routes/game/gameTmpl.html
@@ -10,14 +10,8 @@
     <!--Pause-->
     <a href="/#/pause" class="gamePauseMenu" ng-keypress="pauseGame();">{{gamePauseMenu}}</a>
     <script>
-        var pause 
-    if (keystate[pPAUSE]) {
-        if (pauseGame === false) {
-            pauseGame = true;
-            pause();
-        } else {
-            pauseGame = false;
+        var pauseeGame = function () {
+            
         }
-    }
     </script>
 </div>
