PausePage converted to  PauseDir

--- a/js/directives/pause/pauseTmpl.html
+++ b/js/directives/pause/pauseTmpl.html
@@ -8,8 +8,7 @@
 
     <!--Resume Button-->
     <div>
-        <a href="/#/gameplay">
-        <button class="pauseResumeButton">{{resume}}</button>
+        <button class="pauseResumeButton" style="this.style.display: none;">{{resume}}</button>
     </div>
 
     <!--Quit Button-->
