--- a/js/routes/home/homeTmpl.html
+++ b/js/routes/home/homeTmpl.html
@@ -4,7 +4,7 @@
         <!--Start Button-->
         <div>
             <a href="/#/gameplay">
-                <button class="startButton">{{startGame}}</button>
+                <button class="startButton">{{play}}</button>
             </a>
         </div>
 
@@ -14,6 +14,7 @@
                 <button class="optionsButton">{{options}}</button>
             </a>
         </div>
+        <!--Score Board-->
         <div>
             <a href="/#/scoreboard">
                 <button class="scoreboardButton">{{scoreboardButton}}</button>
