--- a/js/routes/game/gameTmpl.html
+++ b/js/routes/game/gameTmpl.html
@@ -12,25 +12,19 @@
         </a>
         
     <!--Pause-->
-    <div id="pausePage" class="PauseMenu" style="this.style.display: none;">{{pauseHeader}}
+    <div id="pausePage" class="PauseMenu" ng-hide="!pauseGame">PAUSE
         
     <!--Options Button-->
     <div>
         <a href="/#/options">
-            <button class="pauseOptionsButton">{{options}}</button>
+            <button class="pauseOptionsButton">OPTIONS</button>
         </a>
-    </div>
-
-    <!--Resume Button-->
-    <div>
-        <a href="/#/gameplay">
-        <button class="pauseResumeButton">{{resume}}</button>
     </div>
 
     <!--Quit Button-->
     <div>
-        <a href="/#/home">
-            <button class="pauseHomeButton">{{home}}</button>
+        <a href="/#/scoreboard">
+            <button class="pauseHomeButton">QUIT</button>
         </a>
     </div>
     </a>
