Game linked to GameOver Modal

--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     <link rel="stylesheet" href="css/pauseStyle.css">
     <link rel="stylesheet" href="css/scoreboardStyle.css">
     <link rel="stylesheet" href="css/socialMediaStyle.css">
+    <link rel="stylesheet" href="css/gameOverStyle.css">
 </head>
 
 <body>
     <!--Ui-Router-->
     <ui-view></ui-view>
-
+    
     <!--Social Media Directive-->
     <social-media-dir></social-media-dir>
 
