Game linked to GameOver Modal

--- a/js/routes/game/gameTmpl.html
+++ b/js/routes/game/gameTmpl.html
@@ -10,7 +10,10 @@
     <!--Home Button-->
     <a id="gameHome" href="/#/home" class="gameHomeButton" onkeypress="quit()"></a>
 
-    <!--PAUSE PAUSE PAUSE-->
+
+
+
+    <!--Pause-->
     <div id="pausePage" class="PauseMenu" ng-hide="!pauseGame">PAUSE
 
         <!--Options Button-->
@@ -28,9 +31,12 @@
         </div>
     </div>
 
+
+
+
     <!--Game Over-->
-    <a href="/#/scoreboard">
-    
-    </a>
+    <div id="gameOverMenu" class="gameOverMenu">GAME OVER!
+            <input class="gameOverModal" type="text" placeholder="jon snow">
+    </div>
 
 </div>
