--- a/js/routes/scoreboard/scoreboardTmpl.html
+++ b/js/routes/scoreboard/scoreboardTmpl.html
@@ -11,9 +11,9 @@
             <button class="optionsPageButton">{{optionsPageButton}}</button>
         </a>
     </div>
-    <div id="gameOverPage" class="gameOverMenu">
+    <!--<div id="gameOverPage" class="gameOverMenu">
     <div class="gameOverModal">{{gameOverHeader}}GAME OVER!
         <input type="text" class="submission" onsubmit="display: none;">
     </div>
-    </div>
+    </div>-->
 </div>
