Some bugs and No Data, otherwise, its a wrap

--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
     <Script src="js/routes/game/gameCanvas.js"></Script>
     <script src="js/routes/options/optionsCtrl.js"></script>
     <script src="js/routes/scoreboard/scoreboardCtrl.js"></script>
-
-    <script src=""></script>
+    <script src="js/routes/game/gameOverCtrl.js"></script>
 
 </body>
 
