--- a/public/html/game.html
+++ b/public/html/game.html
@@ -4,7 +4,7 @@
     <a id="headerSpace" class="headerButton" href="/#/home">LEAVE GAME</a>
 </div>
 
-<div class="gameView"></div>
+<div class="game"></div>
 
 <div id="footerRow">
     <div class="footerButton">L</div>
