--- a/html/score.html
+++ b/html/score.html
@@ -1,18 +1,19 @@
-<div id="header">
-    <a id="headerButton" ng-click="optToggle()">OPTIONS</a>
-    <a id="headerButton" href="/#/main">MAIN MENU</a>
-    <a id="headerButton" href="/#/game">PLAY GAME</a>
+<div class="title">SNAKE BYTES</div>
+
+<div class="margin">
+    <a class="button"></a>
+    <a class="button" href="/#/main">MAIN MENU</a>
+    <a class="button" href="/#/game">PLAY GAME</a>
+    <a class="button"></a>
 </div>
 
 <div class="canvas"></div>
 
-<div class="footer">
-    <div class="footerButton"></div>
-    <div class="footerButton"></div>
-    <div class="footerButton"></div>
+<div class="margin">
+    <div class="button"></div>
+    <div class="button"></div>
+    <div class="button"></div>
+    <div class="button"></div>
 </div>
-
-<div class="optModal" ng-if="optMenu">
-    <p>OPTIONS</p>
-        <button class="optButton" ng-click="optToggle();">RESUME GAME</button>
-</div>
+  
+    <div class="copyright">&#169{{date}} @PHILLIPPUCKETT88</div>
