--- a/html/game.html
+++ b/html/game.html
@@ -1,19 +1,24 @@
-<div id="header">
-    <a id="headerButton" ng-click="optToggle()">OPTIONS</a>
-    <a id="headerButton">PAUSE</a>
-    <a id="headerButton" href="/#/score">LEAVE GAME</a>
+<div class="title">SNAKE BYTES</div>
+
+<div class="margin">
+    <a class="button"></a>
+    <a class="button" ng-click="optToggle()">PAUSE</a>
+    <a class="button" href="/#/score">LEAVE GAME</a>
+    <a class="button"></a>
 </div>
 
 <div class="canvas"></div>
 
-<div class="footer">
-    <div class="footerButton">L</div>
-    <div class="footerButton">U</div>
-    <div class="footerButton">D</div>
-    <div class="footerButton">R</div>
+<div class="margin">
+    <div class="button">L</div>
+    <div class="button">U</div>
+    <div class="button">D</div>
+    <div class="button">R</div>
 </div>
 
 <div class="optModal" ng-if="optMenu">
     <p>OPTIONS</p>
-        <button class="optButton" ng-click="optToggle();">RESUME GAME</button>
+    <button class="optButton" ng-click="optToggle();">RESUME GAME</button>
 </div>
+
+<div class="copyright">&#169{{date}} @PHILLIPPUCKETT88</div>
