--- a/html/main.html
+++ b/html/main.html
@@ -9,9 +9,10 @@
 
 <div class="canvas">
 
-    <div class="optModal" ng-if="optMenu">
+    <div class="optModal" ng-if="!optMenu">
         <p>OPTIONS</p>
-        <button class="optButton">RESUME GAME</button>
+        <button class="optButton">MUSIC</button>
+        <button class="optButton">SOUND</button>
     </div>
 
 </div>
