Prepping for canvas work

--- a/html/game.html
+++ b/html/game.html
@@ -8,9 +8,12 @@
 </div>
 
 <div class="canvas">
+    
+    
+    <div class="game"></div>
 
     <div class="optModal" ng-if="optMenu">
-        <p>OPTIONS</p>
+        <p class="optmodal">OPTIONS</p>
         <button class="optButton">MUSIC</button>
         <button class="optButton">SOUND</button>        
     </div>
@@ -18,10 +21,10 @@
 </div>
 
 <div class="margin">
-    <div class="button">L</div>
-    <div class="button">U</div>
-    <div class="button">D</div>
-    <div class="button">R</div>
+    <div class="button">LEFT</div>
+    <div class="button">UP</div>
+    <div class="button">DOWN</div>
+    <div class="button">RIGHT</div>
 </div>
 
 
