--- a/html/score.html
+++ b/html/score.html
@@ -7,7 +7,19 @@
     <a class="button"></a>
 </div>
 
-<div class="canvas"></div>
+<div class="canvas">
+
+    <div class="score">
+        <div class="scoreRow">
+            <p>SCOREBOARD</p>
+        </div>
+        <div class="scoreRow">
+            <div class="scoreCol">Names</div>
+            <div class="scoreCol">Points</div>
+        </div>
+    </div>
+
+</div>
 
 <div class="margin">
     <div class="button"></div>
@@ -15,5 +27,5 @@
     <div class="button"></div>
     <div class="button"></div>
 </div>
-  
-    <div class="copyright">&#169{{date}} @PHILLIPPUCKETT88</div>
+
+<div class="copyright">&#169{{date}} @PHILLIPPUCKETT88</div>
