--- a/html/score.html
+++ b/html/score.html
@@ -2,13 +2,11 @@
 
 <div class="margin">
     <a class="button"></a>
-    <a class="button" href="/#/main">MAIN MENU</a>
     <a class="button" href="/#/game">PLAY GAME</a>
     <a class="button"></a>
 </div>
 
 <div class="canvas">
-
     <div class="score">
         <div class="scoreRow">
             <p>SCOREBOARD</p>
@@ -18,13 +16,17 @@
             <div class="scoreCol">Points</div>
         </div>
     </div>
-
+    <div class="optMod" ng-if="options">
+        <p class="optmodal">OPTIONS</p>
+        <button class="optButton">MUSIC</button>
+        <button class="optButton">SOUND</button>
+    </div>
 </div>
 
 <div class="margin">
     <div class="button"></div>
     <div class="button"></div>
-    <div class="button"></div>
+    <!--<a class="button" ng-click="optToggle()">OPTIONS</a>-->
     <div class="button"></div>
 </div>
 
