--- a/html/score.html
+++ b/html/score.html
@@ -25,8 +25,8 @@
 
 <div class="margin">
     <div class="button"></div>
-    <div class="button"></div>
-    <!--<a class="button" ng-click="optToggle()">OPTIONS</a>-->
+    <!--<div class="button"></div>-->
+    <a class="button" ng-click="optToggle()">OPTIONS</a>
     <div class="button"></div>
 </div>
 
