--- a/html/score.html
+++ b/html/score.html
@@ -2,11 +2,11 @@
 
 <div class="margin">
     <a class="button"></a>
-    <a class="button" href="/#/game">PLAY GAME</a>
+    <a class="button" href="/#/game" ng-click="start()">PLAY GAME</a>
     <a class="button"></a>
 </div>
 
-<div class="canvas">
+<div class="backDrop">
     <div class="score">
         <div class="scoreRow">
             <p>SCOREBOARD</p>
