Canvas working. Time to add some functionality

--- a/html/game.html
+++ b/html/game.html
@@ -17,10 +17,10 @@
         <canvas id="canvas" class="game" ng-keypress="onKeypress($event)" tabindex="0"></canvas>
     </div>
 
-    <div class="gameOverMenu">
-        <div class="gameOverModal">GAME OVER!
-            <input type="text" class="submission" onsubmit="display: none;">
-        </div>
+    <div class="goMod"> 
+        <p>GAME OVER</p>
+            <input type="text" class="goSubmit" onsubmit="display: none;">
+        <!--<p class="goText">enter your name</p>-->
     </div>
 
 </div>
