Pause is working

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     <script src="js/app.js"></script>
-    <script src="js/controllers.js"></script>
+    <script src="js/controllers/gameCtrl.js"></script>
+    <script src="js/controllers/goverCtrl.js"></script>
+    <script src="js/controllers/scoreCtrl.js"></script>
     <script src="js/canvas.js"></script>
 
 </body>
