--- a/html/game.html
+++ b/html/game.html
@@ -13,7 +13,7 @@
 <div class="backDrop">
 
     <div class="game">
-        <div class="psMod" ng-if="pause">PAUSED</div>
+        <div class="psMod" ng-if="pause" onkeypress="quit()">PAUSED</div>
         <canvas id="canvas" class="game" ng-keypress="onKeypress($event)" tabindex="0"></canvas>
     </div>
 
@@ -34,4 +34,4 @@
 </div>
 
 
-<div class="copyright">&#169{{date}} @PHILLIPPUCKETT88</div>
+<div class="copyright">&#169{{date}} PHILLIP PUCKETT</div>
