--- a/html/score.html
+++ b/html/score.html
@@ -29,4 +29,4 @@
     <div class="button"></div>
 </div>
 
-<div class="copyright">&#169{{date}} @PHILLIPPUCKETT88</div>
+<div class="copyright">&#169{{date}} PHILLIP PUCKETT</div>
