--- a/html/game.html
+++ b/html/game.html
@@ -6,7 +6,7 @@
         <div class="psTxt" ng-if="!pause">PAUSE</div>
         <div class="psTxt" ng-if="pause">RESUME</div>
     </a>
-    <a class="button" href="/#/score" onkeypress="quit()">LEAVE GAME</a>
+    <a class="button" href="/#/score" onkeypress="qtToggle()">LEAVE GAME</a>
     <a class="button"></a>
 </div>
 
