--- a/html/game.html
+++ b/html/game.html
@@ -3,27 +3,28 @@
 <div class="margin">
     <a class="button"></a>
     <a class="button" ng-click="psToggle()">
-        <div class="psTxt" ng-if="!pause">PAUSE</div>
-        <div class="psTxt" ng-if="pause">RESUME</div>
+        <div class="psTxt" ng-if="!pauseGame">PAUSE</div>
+        <div class="psTxt" ng-if="pauseGame">RESUME</div>
     </a>
-    <a class="button" href="/#/score" onkeypress="qtToggle()">LEAVE GAME</a>
+    <a class="button" href="/#/score">LEAVE GAME</a>
+    <!--<a class="button" href="/#/score" ng-click="qtToggle()">LEAVE GAME</a>-->
     <a class="button"></a>
 </div>
 
-<div class="backDrop">
+<div class="backDrop" ng-controller="goCtrl">
 
     <div class="game">
-        <div class="psMod" ng-if="pause">PAUSED</div>
+        <div class="psMod" ng-if="keyP">PAUSED</div>
         <canvas id="canvas" class="game" ng-keypress="onKeypress($event)" tabindex="0"></canvas>
     </div>
 
-    <div class="goMod"> 
-        <p>GAME OVER</p>
-            <input type="text" class="goSubmit" onsubmit="display: none;">
-        <!--<p class="goText">enter your name</p>-->
+    <form ng-submit="goSubmit()">
+        <div class="goMod">
+            <p>GAME OVER</p>
+            <input type="text" class="goSubmit">
+    </form>
     </div>
 
-</div>
 </div>
 
 <div class="margin">
