--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
+    
     <script src="js/app.js"></script>
-    <script src="js/controllers/gameCtrl.js"></script>
-    <script src="js/controllers/goverCtrl.js"></script>
-    <script src="js/controllers/scoreCtrl.js"></script>
     <script src="js/canvas.js"></script>
+    
+    <script src="js/controllers/gameCtrl.js"></script>
+    <script src="js/controllers/goCtrl.js"></script>
+    <script src="js/controllers/scoreCtrl.js"></script>
 
 </body>
 
