--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,9 @@
     
     <script src="js/app.js"></script>
     <script src="js/canvas.js"></script>   
-    <script src="js/gameCtrl.js"></script>
-    <script src="js/goCtrl.js"></script>
-    <script src="js/scoreCtrl.js"></script>
+    <script src="js/controllers/gameCtrl.js"></script>
+    <script src="js/controllers/goCtrl.js"></script>
+    <script src="js/controllers/scoreCtrl.js"></script>
 
 </body>
 
