--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     
     <script src="js/app.js"></script>
     <script src="js/canvas.js"></script>   
-    <script src="js/controllers/gameCtrl.js"></script>
-    <script src="js/controllers/scoreCtrl.js"></script>
+    <script src="js/ctrl.js"></script>
+    <script src="js/svc.js"></script>
 
 </body>
 
