--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,14 @@
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.5/angular.js"></script>
+        <!--<script data-require="angular.js@*" data-semver="1.3.7" src="https://code.angularjs.org/1.2.28/angular.js"></script>-->
+    <!--<script data-require="angular.js@*" data-semver="1.3.7" src="https://code.angularjs.org/1.2.28/angular-route.js"></script>-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.js"></script>
     
     <script src="js/app.js"></script>
     <script src="js/canvas.js"></script>   
-    <script src="js/ctrl.js"></script>
-    <script src="js/svc.js"></script>
+    <script src="js/controller.js"></script>
+    <script src="js/service.js"></script>
 
 </body>
 
