--- a/html/game.html
+++ b/html/game.html
@@ -1,6 +1,7 @@
 <div class="container">
     <div class="title">SNAKE BYTES</div>
 
+    <!--MENU-->
     <div class="margin">
         <a class="button" ng-click="pause()">
             <div ng-if="!pauseGame">PAUSE</div>
@@ -9,5 +10,21 @@
         <a class="button"></a>
         <a class="button" ng-click="quit()">QUIT</a>
     </div>
+    <!--MENU-->
+
+    <!--GAME-->
+    <div class="bg">
+        <div class="game">
+            <div class="psMod" ng-if="keyP">PAUSED</div>
+            <canvas id="canvas" class="game" ng-keypress="onKeypress($event)" tabindex="0"></canvas>
+        </div>
+        <form ng-submit="createScore()" ng-controller="mainCtrl">
+            <div class="scoreSubmit">
+                <p>GAME OVER</p>
+                <input type="text" class="player" ng-model="scores.scores">
+        </form>
+        </div>
+    </div>
+    <!--GAME-->
 
 </div>
