--- a/html/score.html
+++ b/html/score.html
@@ -1,11 +1,13 @@
 <div class="container">
     <div class="title">SNAKE BYTES</div>
 
+    <!--MENU-->
     <div class="margin">
         <a class="button"></a>
         <a class="button" href="/#/game">PLAY</a>
         <a class="button"></a>
     </div>
+    <!--MENU-->
 
     <!--SCOREBOARD-->
     <div class="bg">
