--- a/html/game.html
+++ b/html/game.html
@@ -1,33 +1,61 @@
-<div class="container">
-    <div class="title">SNAKE BYTES</div>
+<div class="titleMobile">
+    <p class="titleText">SNAKE</p>
+</div>
 
-    <!--MENU-->
-    <div class="margin">
-        <a class="button">
-            <div ng-if="!pauseGame">PAUSE</div>
-            <div ng-if="pauseGame">RESUME</div>
-        </a>
-        <a class="button"></a>
-        <a class="button"></a>
+<div class="titleDesktop">
+    <p class="titleText">SNAKE</p>
+    <p class="copyrightDesktop">&#169{{date}} PHILLIP E PUCKETT</p>
+</div>
+
+
+
+<div class="marginMobile">
+    <a class="button" ng-click="pause()">
+        <p class="psTxt" ng-if="!pauseGame">PAUSE</p>
+        <p class="psTxt" ng-if="pauseGame">RESUME</p>
+    </a>
+    <a class="button"></a>
+    <a class="button" ng-click="quit()">
+        <p class="psTxt">QUIT</p>
+    </a>
+</div>
+
+
+
+<div class="background">
+    <canvas id="canvas" ng-keypress="onKeypress($event)" tabindex="0"></canvas>
+</div>
+
+
+<form ng-submit="createScore()">
+    <div class="scoreSubmit">
+        GAME OVER
+        <input type="text" class="player">
+        <!--ng-model="scores.scores"-->
     </div>
-    <!--MENU-->
+</form>
 
-    <!--GAME-->
-    <div class="bg">
-        <div class="game">
-            <div class="psMod">PAUSED</div>
-            <canvas id="canvas" class="game"></canvas>
-        </div>
 
-        <form ng-controller="mainCtrl">
-            <div class="scoreSubmit">
-                GAME OVER
-                <input type="text" class="player">
-        </form>
-        
-        </div>
+
+<div class="marginMobile">
+    <div class="button">
+        <p>LEFT</p>
     </div>
-    <!--GAME-->
-    
+    <div class="button">
+        <p>UP</p>
+    </div>
+    <div class="button">
+        <p>DOWN</p>
+    </div>
+    <div class="button">
+        <p>RIGHT</p>
+    </div>
+</div>
 
+
+
+<div class="copyrightMobile">&#169{{date}} PHILLIP E PUCKETT</div>
+<div class="marginDesktop">
+    <a class="button" ng-click="pause()">P = Pause Game</a>
+    <a class="button" ng-click="quit()">Q = Quit Game</a>
 </div>
