--- a/index.html
+++ b/index.html
@@ -3,32 +3,26 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Snake</title>
 
-    <!--STYLE(S)-->
     <link rel="stylesheet" href="style.css">
     <link href='https://fonts.googleapis.com/css?family=Slackey' rel='stylesheet' type='text/css'>
-    <!--STYLE(S)-->
 
 </head>
 
 <body>
 
-    <!--VIEW-->
     <ui-view></ui-view>
-    <!--VIEW-->
 
-    <!--CDN(S)-->
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.8/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.1/angular-ui-router.min.js"></script>
-    <!--CDN(S)-->
 
-    <!--SCRIPT(S)-->
     <script src="js/app.js"></script>
     <script src="js/mainCnvs.js"></script>
-    <script src="js/mainCtrl.js"></script>
+    <script src="js/gameCtrl.js"></script>
+    <script src="js/scoreCtrl.js"></script>
     <script src="js/mainSvc.js"></script>
-    <!--SCRIPT(S)-->
 
 </body>
 
